# Surrounded-By-Idiots

./: .replit  ai_prompts.py  main.py  normative_data.py  packer.sh  project_pack.txt  pyproject.toml  quiz_content.py  quiz_content_big5.py  quiz_content_ipip120.py  replit.nix  requirements.txt  unpacker.sh
static/css/: style.css
static/js/: accordion.js  quiz.js  results_chart.js  results_interactive.js
templates/: analyzing.html  base.html  index.html  login.html  profile.html  quiz.html  register.html  results.html
