[tool.poetry]
name = "workspace"
version = "0.1.0"
description = ""
authors = ["JaredJLG <147558015+JaredJLG@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.1.1"
flask-sqlalchemy = "^3.1.1"
flask-login = "^0.6.3"
werkzeug = "^3.1.3"
openai = "^1.12.0"
markdown = "^3.5.2"
# Flask-Migrate is no longer needed for this simpler approach
markupsafe = "^3.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
